--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -2,3 +2,7 @@
 /FiguraGeometrica.class
 /Rectangulo.class
 /Triangulo.class
+/Circulo_ATC.class
+/FiguraGeometrica_ATC.class
+/Rectangulo_ATC.class
+/Triangulo_ATC.class
