--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -1,8 +1,1 @@
-/Circulo.class
-/FiguraGeometrica.class
-/Rectangulo.class
-/Triangulo.class
-/Circulo_ATC.class
-/FiguraGeometrica_ATC.class
-/Rectangulo_ATC.class
-/Triangulo_ATC.class
+/geometria/
